--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,14 @@ name: build
 # Environment         (none)
 
 on:
-- push
+  push:
+    branches:
+    - '**'
+    tags-ignore:
+    - '**'
+  schedule:
+  # Build daily at 6:02am...
+  - cron: '2 6 * * *'
 
 jobs:
   build:
